ZBC-7: handle multiple survivors